gce-rke-cluster/deploy/01_basics/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ext
  namespace: ingress-nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: '*.gcp-rke-demo.its-software-services.com' 
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
