gce-rke-cluster/deploy/01_basics/nginx-ingress-neg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-neg
  namespace: ingress-nginx  
spec:
  defaultBackend:
    service:
      name: nginx-neg # Name of the Service targeted by the Ingress
      port:
        number: 80 # Should match the port used by the Service
